[20241215] Update the schema config path ## Updates - Updated the schema config path to follow: `schema/<source>/<database>_<table>/schema.json`. - Created `KafkaTopicResolver` and `BigQueryTableResolver` classes to resolve components and determines the source system. - Added new types of source.   - `DATA_WAREHOUSE`   - `DATA_MART`